# VersorStudio

./: .gitmodules  CMakeLists.txt  readme.md  vcpkg.json
VersorStudio/: CMakeLists.txt  Gibbs.cpp  Gibbs.h  UseImGui.h  Versor.cpp  Versor.h  VersorAgent.cpp  VersorAgent.h  main.cpp
